fix: Make time input field 60% smaller
- Set fixed width of 50px (desktop) and 45px (mobile) instead of auto-expanding
- Add max-width constraints to prevent field from growing too large
- Maintains usability while taking up much less space

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -763,8 +763,8 @@ body {
     font-size: 16px;
     font-weight: 400;
     padding: 2px 6px;
-    width: auto;
-    min-width: 45px;
+    width: 50px;
+    max-width: 50px;
     text-align: center;
     font-family: 'Montserrat', sans-serif;
     outline: none;
@@ -1101,7 +1101,8 @@ body {
 
     .time-input {
         font-size: 16px;
-        width: 55px;
+        width: 45px;
+        max-width: 45px;
         padding: 3px 6px;
     }
 
